# Robotis-Mini

./: .gitignore  CMakeLists.txt  README.md
ros1_ws/src/bt210_bridge/: CMakeLists.txt  package.xml
ros1_ws/src/bt210_bridge/msg/: Xl320StateMsg.msg
ros1_ws/src/bt210_bridge/src/: bt210_bridge.cpp
ros2_ws/robotis_mini_description/: CMakeLists.txt  package.xml
ros2_ws/robotis_mini_description/urdf/: common.urdf.xacro  robotis_mini.urdf.xacro  servo.urdf.xacro
ros2_ws/robotis_mini_model/: CMakeLists.txt  package.xml
ros2_ws/robotis_mini_model/urdf/: robotis_mini.urdf.xacro
ros2_ws/src/bt210_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/bt210_bridge/src/: bt210_bridge.cpp
ros2_ws/src/bt210_interface/: CMakeLists.txt  package.xml
ros2_ws/src/bt210_interface/msg/: Xl320StateMsg.msg
ros2_ws/src/head_node/: CMakeLists.txt  package.xml
ros2_ws/src/head_node/src/: head_publisher.cpp
ros2_ws/src/robotis_mini_description/urdf/: body.urdf.xacro  common.urdf.xacro  head.urdf.xacro  materials.urdf.xacro  robotis_mini.urdf.xacro  servo.urdf.xacro
ros2_ws/src/webots_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/webots_bridge/src/: webots_bridge.cpp
sandbox/arduino/dynamixel2arduino/: initial-pose.ino
sandbox/arduino/dynamixel2arduino/bluetooth-relay/: bluetooth-relay.ino
sandbox/arduino/dynamixel2arduino/bluetooth-throughput/: bluetooth-throughput.ino
sandbox/arduino/dynamixel2arduino/bluetooth-throughput/analyzer/: CMakeLists.txt  bt210-throughput
sandbox/arduino/dynamixel2arduino/bluetooth-throughput/analyzer/src/: main.cc
sandbox/arduino/dynamixelsdk/: control-arm.ino  set-leds.ino
webots_ws/robotis_mini/: example.launch.py  robotis.launch.py
webots_ws/robotis_mini/protos/: .RobotisMini.cache
webots_ws/robotis_mini/worlds/: .empty.wbproj  empty.wbt
(+3 files in other folders)
